# python-project-52

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev-local.yaml  docker-compose.dev.yaml  docker-compose.production.yaml  docker-entrypoint.sh  example.env  pyproject.toml
.github/workflows/: django-check.yml
account/management/commands/: create_superuser.py
task_manager/: mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/account/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/account/migrations/: 0001_initial.py
task_manager/account/templates/: signup.html  users.html
task_manager/settings/: __init__.py
task_manager/settings/components/: base.py  database.py
task_manager/settings/environments/: local_example.py  production.py  railway.py
task_manager/statuses/: apps.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_taskstatus_name.py
task_manager/tasks/: apps.py  models.py  urls.py  views.py
task_manager/templates/: base.html  confirm_delete.html  form.html  index.html  navbar.html
task_manager/users/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
templates/: base.html  footer.html  index.html  navbar.html  users.html
tests/: conftest.py  test_index.py  test_login.py  test_main.py
tests/functional/: conftest.py
tests/test_statuses/: test_delete_status.py  test_statuses.py
tests/test_tasks/: test_tasks.py
tests/test_users/: conftest.py  test_delete_user.py  test_update_user.py
(+23 files in other folders)
