[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["KAnanev <russrage@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
python-dotenv = "^1.0.0"
psycopg = "^3.1.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
