[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["KAnanev <russrage@yandex.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
python-dotenv = "^1.0.0"
psycopg = "^3.1.10"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"
django-split-settings = "^1.2.0"
django-bootstrap5 = "^23.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest-django = "^4.5.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"